--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "ethers": "^4.0.23",
     "openzeppelin-solidity": "^2.1.2",
     "openzeppelin-test-helpers": "^0.1.2",
+    "save": "^2.3.3",
     "should": "^13.2.3",
     "sol-merger": "^0.1.3",
     "solc": "^0.5.2",
-    "truffle-hdwallet-provider": "0.0.6"
+    "truffle-hdwallet-provider": "^1.0.0-web3one.4"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
